practice routing with react router

--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,15 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #464646;
+  color: #2a292e;
+  background-color: #f8f4f0;;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+input {
+  border: 1px solid black;
 }
