--- a/src/components/layouts/Navbar/Navbar.module.css
+++ b/src/components/layouts/Navbar/Navbar.module.css
@@ -1,9 +1,12 @@
 @reference "tailwindcss";
 
 .activeLink {
-  @apply bg-[#F8F4F0] text-[#201F24] rounded-r-xl border-l-4 border-l-[#277c78] pl-8;
+  background-color: var(--color-beige-100);
+  color: var(--color-grey-900);
+  border-left: var(--color-green);
+  @apply rounded-r-xl border-l-4 pl-8;
 }
 
 .activeLink svg {
-  @apply text-[#277c78];
+  color: var(--color-green);
 }
