--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: #2a292e;
-  background-color: #f8f4f0;
+  background-color: var(--color-beige-100);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
