--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #2a292e;
+  color: var(--color-grey-900);
   background-color: var(--color-beige-100);
 
   font-synthesis: none;
@@ -41,4 +41,13 @@
   --color-orange: #be6c49;
 
   --color-white: #fff;
+}
+
+@layer base {
+  h1 {
+    font-size: 32px;
+    line-height: 1.2;
+    letter-spacing: 0px;
+    font-weight: bold;
+  }
 }
