--- a/src/index.css
+++ b/src/index.css
@@ -23,18 +23,18 @@
   --text-preset-5: 12px;
 
   /* Line heights */
-  --text-preset-1: 120%;
-  --text-preset-2: 120%;
-  --text-preset-3: 150%;
-  --text-preset-4: 150%;
-  --text-preset-5: 150%;
+  --leading-preset-1: 120%;
+  --leading-preset-2: 120%;
+  --leading-preset-3: 150%;
+  --leading-preset-4: 150%;
+  --leading-preset-5: 150%;
 
   /* Letter spacing */
-  --leading-preset-1: 0px;
-  --leading-preset-2: 0px;
-  --leading-preset-3: 0px;
-  --leading-preset-4: 0px;
-  --leading-preset-5: 0px;
+  --tracking-preset-1: 0px;
+  --tracking-preset-2: 0px;
+  --tracking-preset-3: 0px;
+  --tracking-preset-4: 0px;
+  --tracking-preset-5: 0px;
 
   /* Font weight */
   --weight-bold: 700;
